<resources>
    <string name="app_name">ProyectoMultipantalla</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="segundo">Segundo</string>
    <string name="primero">primero</string>
    <string name="tercero">tercero</string>
    <string name="cuarto">cuarto</string>
    <string name="quinto">quinto</string>
    <string name="sexto">sexto</string>
    <string name="septimo">septimo</string>
    <string name="octavo">octavo</string>
    <string name="noveno">noveno</string>
    <string name="irsexto">IrSexto</string>
    <string name="segundofragment">SegundoFragment</string>
    <string name="primerfragment">primerFragment</string>
</resources>