<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/primerFragment">

    <fragment
        android:id="@+id/primerFragment"
        android:name="com.example.fragments.ui.fragments.fragmentsRoot.PrimerFragment"
        android:label="@string/primero"
        tools:layout="@layout/fragment_primer">
        <action
            android:id="@+id/action_primerFragment_to_tercerFragment"
            app:destination="@id/tercerFragment" />
        <action
            android:id="@+id/action_primerFragment_to_segundoFragment"
            app:destination="@id/segundoFragment" />
        <action
            android:id="@+id/action_primerFragment_to_cuartoFragment"
            app:destination="@+id/cuartoFragment" />
        <action
            android:id="@+id/action_primerFragmento_to_septimoFragment"
            app:destination="@id/septimoFragment"/>



    </fragment>
    <fragment
        android:id="@+id/segundoFragment"
        android:name="com.example.fragments.ui.fragments.SegundoFragment"
        android:label="@string/segundo"
        tools:layout="@layout/fragment_segundo">
        <action
            android:id="@+id/meVoyDeSegundoATercero"
            app:destination="@id/tercerFragment" />
        <action
            android:id="@+id/action_segundoFragment_to_primerFragment"
            app:destination="@id/primerFragment" />
        <action
            android:id="@+id/action_primerFragment_to_tercerFragment"
            app:destination="@id/tercerFragment" />
    </fragment>
    <fragment
        android:id="@+id/tercerFragment"
        android:name="com.example.fragments.ui.fragments.TercerFragment"
        android:label="@string/tercero"
        tools:layout="@layout/fragment_tercer">
        <action
            android:id="@+id/action_tercerFragment_to_primerFragment"
            app:destination="@id/primerFragment" />
        <action
            android:id="@+id/action_primerFragment_to_segundoFragment"
            app:destination="@id/segundoFragment" />
    </fragment>
    <fragment
        android:id="@+id/cuartoFragment"
        android:name="com.example.fragments.ui.fragments.fragmentsRoot.CuartoFragment"
        android:label="@string/cuarto"
        tools:layout="@layout/fragment_cuarto">
        <action
            android:id="@+id/action_cuartoragment_to_sextoFragment"
            app:destination="@id/sextoFragment" />
        <action
            android:id="@+id/action_cuartoFragment_to_quintoFragment"
            app:destination="@id/quintoFragment" />
        <action
            android:id="@+id/action_cuartoFragmento_to_septimoFragment"
            app:destination="@id/septimoFragment"/>
        <action
            android:id="@+id/action_cuartoFragmento_to_primeroFragment"
            app:destination="@+id/primerFragment"/>
    </fragment>
    <fragment
        android:id="@+id/quintoFragment"
        android:name="com.example.fragments.ui.fragments.QuintoFragment"
        android:label="@string/quinto"
        tools:layout="@layout/fragment_quinto">
        <action
            android:id="@+id/action_quintoFragment_to_cuartoFragment"
            app:destination="@id/quintoFragment" />
        <action
            android:id="@+id/action_quintoFragment_to_sextoFragment"
            app:destination="@id/cuartoFragment" />
    </fragment>
    <fragment
        android:id="@+id/sextoFragment"
        android:name="com.example.fragments.ui.fragments.SextoFragment"
        android:label="@string/sexto"
        tools:layout="@layout/fragment_sexto">
        <action
            android:id="@+id/action_sextoFragment_to_quintoFragment"
            app:destination="@id/quintoFragment" />
        <action
            android:id="@+id/action_sextoFragment_to_cuartoFragment"
            app:destination="@id/cuartoFragment" />
    </fragment>

    <fragment
        android:id="@+id/septimoFragment"
        android:name="com.example.fragments.ui.fragments.fragmentsRoot.SeptimoFragment"
        android:label="@string/septimo"
        tools:layout="@layout/fragment_septimo">
        <action
            android:id="@+id/action_septimoFragment_to_octavoFragment"
            app:destination="@id/octavoFragment" />
        <action
            android:id="@+id/action_septimoFragment_to_novenoFragment"
            app:destination="@id/novenoFragment" />
        <action
            android:id="@+id/action_septimoFragmento_to_primeroFragment"
            app:destination="@+id/primerFragment"/>
        <action
            android:id="@+id/action_septimoFragmento_to_cuartoFragment"
            app:destination="@id/cuartoFragment"/>
    </fragment>
    <fragment
        android:id="@+id/octavoFragment"
        android:name="com.example.fragments.ui.fragments.OctavoFragment"
        android:label="@string/octavo"
        tools:layout="@layout/fragment_octavo">
        <action
            android:id="@+id/action_octavoFragment_to_septimoFragment"
            app:destination="@id/septimoFragment" />
        <action
            android:id="@+id/action_octavoFragment_to_novenoFragment"
            app:destination="@id/novenoFragment" />
    </fragment>
    <fragment
        android:id="@+id/novenoFragment"
        android:name="com.example.fragments.ui.fragments.NovenoFragment"
        android:label="@string/noveno"
        tools:layout="@layout/fragment_noveno">
        <action
            android:id="@+id/action_novenoFragment_to_septimoFragment"
            app:destination="@id/septimoFragment" />
        <action
            android:id="@+id/action_novenoFragment_to_octavoFragment"
            app:destination="@id/octavoFragment" />
    </fragment>

</navigation>